# E_Bay_scrappers

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Searchign_items/: README.md  ebay_bs4_selenium.py  ebay_laptops.csv  requirements.txt  x.html
Searchign_items/notebook/: main.ipynb
ebay_scraper/: __main__.py
ebay_scraper/searchItems/: search.py
ebay_scraper/search_items/: search.py
ebay_scraper/utils/: common.py  selenium_utils.py
ebay_scrapper/search_items/: ebay_bs4_selenium.py
ebay_scrapper/utils/: selenium_utils.py
notebook/: ebay_bs4_selenium.ipynb  test.ipynb
sample_data/: ebay_laptops.csv  mac.csv.csv
tests/: test_search_items.py  test_utils.py
utils/: selenium_utils.py
