[project]
name = "ebay-scraper"
version = "0.1.0"
description = "A web scraper for eBay"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Md Abdullah Al Mamun", email = "your@email.com" }]
dependencies = [
  "selenium",
  "beautifulsoup4",
  "pandas"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
